Fixed scanning, added QR generation and parsing.

--- a/superscout/src/main/AndroidManifest.xml
+++ b/superscout/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MatchScoutActivity"
+            android:label="@string/title_activity_match_scout"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mvrt.superscout.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
