--- a/superscout/build.gradle
+++ b/superscout/build.gradle
@@ -4,6 +4,11 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+    }
+
     defaultConfig {
         applicationId "com.mvrt.superscout"
         minSdkVersion 18
@@ -21,6 +26,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile group: 'io.orchestrate', name: 'orchestrate-client', version: '0.11.0'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile project(':mvrtlib')
 }
