--- a/superscout/src/main/AndroidManifest.xml
+++ b/superscout/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.mvrt.superscout" >
 
     <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.internet"/>
 
     <application
         android:allowBackup="true"
