Change db to firebase and add working code

--- a/superscout/src/main/AndroidManifest.xml
+++ b/superscout/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.mvrt.superscout" >
 
     <uses-permission android:name="android.permission.NFC" />
-    <uses-permission android:name="android.permission.internet"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
