--- a/superscout/build.gradle
+++ b/superscout/build.gradle
@@ -6,6 +6,7 @@ android {
 
     packagingOptions {
         exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
         exclude 'META-INF/NOTICE'
     }
 
@@ -26,7 +27,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile group: 'io.orchestrate', name: 'orchestrate-client', version: '0.11.0'
+    compile 'com.firebase:firebase-client-android:2.3.1+'
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile project(':mvrtlib')
 }
