--- a/scout/build.gradle
+++ b/scout/build.gradle
@@ -28,5 +28,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':mvrtlib')
+    compile 'com.firebase:firebase-client-android:2.3.1+'
     compile 'com.android.support:appcompat-v7:23.1.1'
 }
