--- a/pit/src/main/AndroidManifest.xml
+++ b/pit/src/main/AndroidManifest.xml
@@ -13,12 +13,16 @@
         <activity
             android:name=".PitScout"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LocalDataActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
         </activity>
     </application>
 
