--- a/superscout/build.gradle
+++ b/superscout/build.gradle
@@ -27,7 +27,10 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.firebase:firebase-client-android:2.3.1+'
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.google.firebase:firebase-database:9.4.0'
+    compile 'com.google.firebase:firebase-config:9.4.0'
     compile project(':mvrtlib')
 }
+
+apply plugin: 'com.google.gms.google-services'
