--- a/scout/build.gradle
+++ b/scout/build.gradle
@@ -28,6 +28,9 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':mvrtlib')
-    compile 'com.firebase:firebase-client-android:2.3.1+'
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.google.firebase:firebase-database:9.4.0'
+    compile 'com.google.firebase:firebase-config:9.4.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
