--- a/scout/build.gradle
+++ b/scout/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '27.0.3'
 
     packagingOptions {
         exclude 'META-INF/LICENSE'
@@ -30,6 +30,8 @@ dependencies {
     compile project(':mvrtlib')
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.firebase:firebase-config:9.4.0'
+    compile 'com.android.volley:volley:1.1.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
