--- a/superscout/build.gradle
+++ b/superscout/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '27.0.3'
 
     packagingOptions {
         exclude 'META-INF/LICENSE'
@@ -12,7 +12,7 @@ android {
 
     defaultConfig {
         applicationId "com.mvrt.superscout"
-        minSdkVersion 18
+        minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -29,6 +29,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.firebase:firebase-config:9.4.0'
+    compile 'com.android.volley:volley:1.1.0'
     compile project(':mvrtlib')
 }
 
